syntax = "proto3";

package whisk.console.recipe.v1;

import "google/protobuf/wrappers.proto";

message RecipeDetails {
  string id = 1;
  google.protobuf.StringValue name = 2;
  repeated string names = 3;
  bool plain_bool = 4;
  google.protobuf.BoolValue bool_value = 5;
}